- menu lvl > 2 ie fix - some rgba fixes for table styles - slider overflow fix

--- a/fileadmin/templates/tgudy/style.css
+++ b/fileadmin/templates/tgudy/style.css
@@ -228,8 +228,10 @@ body, #footer-wrapper {
 #header-content .frame {
   padding: 20px;
 	height:260px;
-
+  width:900px;
 	background: transparent url(img/header-slider.png) no-repeat top center; 
+  overflow:hidden;
+
 }
 
 #header-title-wrapper {
